prettified the feedback

--- a/templates/active-test.html
+++ b/templates/active-test.html
@@ -1,16 +1,16 @@
 <template id="active-test">
   <style scoped>
     .correct {
-      color: green;
+      color: #060;
     }
-    .correct::after {
-      content: "  ✓";
+    .correct::before {
+      content: "✓ ";
     }
     .incorrect {
-      color: red;
+      color: #900;
     }
-    .incorrect::after {
-      content: "  ✗";
+    .incorrect::before {
+      content: "✗ ";
     }
     .test-desc {
       width: 100%;
