engine works. testing page speed

--- a/templates/test-suite.html
+++ b/templates/test-suite.html
@@ -63,6 +63,7 @@ When all tests pass, it emits a 'suite-passed' event to the
     
       function displayCode() {
         sc.innerHTML = "<div>" + suiteName + " Code: " + suiteCode + "</div>";
+        console.log(suiteName + " Code: " + suiteCode);
       };
 
       var eventCollector = [];
