adding tests RI project part 1 and 2

--- a/templates/test-widget.html
+++ b/templates/test-widget.html
@@ -69,6 +69,10 @@ when all suites pass.
         twd.style.top = window.scrollY + "px";
       };
 
+      window.onload = function() {
+        twd.style.top = window.scrollY + "px";
+      };
+
       var eventCollector = [];
       this.addEventListener('suite-passed', function (e) {
         if (eventCollector.indexOf(e.detail) === -1) {
