--- a/templates/active-test.html
+++ b/templates/active-test.html
@@ -44,6 +44,8 @@ The test bubbles an 'test-passed' event to the <test-suite> when it passes.
       var testFunc = this.test.func;
       var testParams = this.test.params;
       var testDesc = this.test.desc;
+      var noRepeat = this.test.noRepeat || false;
+      var async = this.test.async || false;
 
       var td = this.shadowRoot.querySelector('.test-desc');
       td.innerHTML = testDesc;
@@ -65,13 +67,17 @@ The test bubbles an 'test-passed' event to the <test-suite> when it passes.
       var testCorrect = false;
       var gradeRunner = setInterval(function() {
         // testCorrect = executeFunctionByName(testFunc, grader, testParams);
-        testCorrect = grader[testFunc](testParams);
-        // try {
-        //   testCorrect = grader[testFunc](testParams);
-        // } catch (e) {
-        //   console.log("Test: " + testFunc + " failed to execute with args:");
-        //   console.log(testParams)
-        // }
+        // testCorrect = grader[testFunc](testParams);
+        
+        // TODO: if async flag is on, then use a promise to check the test when it resolves?
+
+        try {
+          testCorrect = grader[testFunc](testParams);
+        } catch (e) {
+          // TODO: make this more useful
+          throw new Error("Test: " + testFunc + " failed to execute with args:" + testParams[0]);
+        }
+        if (noRepeat) clearInterval(gradeRunner);
         if (testCorrect) {
           td.classList.toggle('incorrect');
           td.classList.toggle('correct');
