--- a/templates/active-test.html
+++ b/templates/active-test.html
@@ -91,10 +91,12 @@ The test bubbles an 'test-passed' event to the <test-suite> when it passes.
             testHasPassed();
           },
           error: function(detail) {
+            console.log("test failed");
             // nothing for now
           },
           update: function(detail) {
             // TODO: expand this logic to show other pieces of data.
+            console.log("test update");
             if (showCurrent && responseDetails['bytes']) renderCurrentValue((responseDetails['bytes'] / 1000000).toString().slice(0,4) + "MB");
           }
         };
@@ -120,8 +122,6 @@ The test bubbles an 'test-passed' event to the <test-suite> when it passes.
         // testCorrect = executeFunctionByName(testFunc, grader, testParams);
         // testCorrect = grader[testFunc](testParams);
         
-        // TODO: if async flag is on, then use a promise to check the test when it resolves?
-
         if (async) {
           runAsyncTest(grader[testFunc], testParams);
         } else if (!async) {
@@ -131,14 +131,7 @@ The test bubbles an 'test-passed' event to the <test-suite> when it passes.
             // TODO: make this more useful
             throw new Error("Test: " + testFunc + " failed to execute with args:" + testParams[0]);
           }
-          if (testCorrect) {
-            // td.classList.toggle('incorrect');
-            // td.classList.toggle('correct');
-            // var passEvent = new CustomEvent('test-passed', {'detail': testDesc});
-            // td.dispatchEvent(passEvent);
-            // clearInterval(gradeRunner);
-            testHasPassed();
-          }
+          if (testCorrect) testHasPassed();
         }
         if (noRepeat || async) clearInterval(gradeRunner);
       }, 1000)
