fixed a css transition bug

--- a/templates/test-widget.html
+++ b/templates/test-widget.html
@@ -23,14 +23,13 @@ when all suites pass.
       max-width: 400px;
       background-color: rgba(230, 230, 230, 0.8);
       opacity: 0.5;
-      transition: opacity 0.3s;
       right: 0px;
       top: 0px;
       padding: 0.5em;
       text-align: left;
       max-height: 100%;
-      transition: max-height 0.3s;
       overflow-y: auto;
+      transition: opacity 0.3s, max-height 0.3s;;
     }
 
     @media screen and (max-width: 800px) {
