direct links, not relative to components

--- a/templates/test-widget.html
+++ b/templates/test-widget.html
@@ -8,7 +8,7 @@ Listens for 'suite-passed' events. Emits a 'grader-passed' event
 when all suites pass.
 -->
 
-<link rel="import" href="/frontend-grading-engine/templates/test-suite.html">
+<link rel="import" href="http://udacity.github.io/frontend-grading-engine/templates/test-suite.html">
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro">
 
 <template id="test-widget">
