--- a/templates/test-suite.html
+++ b/templates/test-suite.html
@@ -9,7 +9,7 @@ When all tests pass, it emits a 'suite-passed' event to the
 <test-widget>.
 -->
 
-<link rel="import" href="/frontend-grading-engine/templates/active-test.html">
+<link rel="import" href="http://udacity.github.io/frontend-grading-engine/templates/active-test.html">
 
 <template id="test-suite">
   <style scoped>
