--- a/templates/active-test.html
+++ b/templates/active-test.html
@@ -100,6 +100,7 @@ The test bubbles an 'test-passed' event to the <test-suite> when it passes.
           }
         };
 
+        // TODO: refactor this so it's not just page-bytes
         var promise = new Promise(
             function(resolve, reject) {
               cb(params);
@@ -122,6 +123,8 @@ The test bubbles an 'test-passed' event to the <test-suite> when it passes.
         * async tests resolve through promises.
       */
 
+      // TODO: clean up this logic
+      // TODO: move repeat logic in here
       var testCorrect = false;
       if (!optional) fireTestStatusEvent({'index': index, 'testCorrect': testCorrect, 'desc': testDesc});
       var gradeRunner = setInterval(function() {
